# FHAB_Database_Modernized

./: .gitignore  .nojekyll  LICENSE  README.md  community.html  feedback.html  glossary.html  index.html  lab-ingest.html  pyproject.toml  render.yaml  robots.txt  sampling-provenance.docx  sampling-provenance.html  search.json  sitemap.xml  staff.html  wsgi.py
.claude/: launch.json
docs/: BEND_CEDEN_WORKFLOW.md  CASE_MANAGEMENT_RULES.md  DATA_MODEL_CA_FHAB.md  DEPLOYMENT.md  FHAB_Tester_Guide.docx  GAP_ANALYSIS.md  GEOCONNEX.md  GOVERNANCE_REVIEW.md  INTAKE.md  LEGACY_SCHEMA_REVIEW.md  OPEN_DATA.md  PILOT_WORKPLAN.md  REQUIREMENTS.md  SCHEMA.md  SCHEMA_PROPOSAL.md  TESTER_GUIDE.md  USER_ROLES.md
manual/: _quarto.yml  community.qmd  feedback.qmd  glossary.qmd  index.qmd  lab-ingest.qmd  sampling-provenance.qmd  staff.qmd
scripts/: backfill_determination.py  deploy_setup.py  devdb.sh  enter_report.py  export_flatfiles.py  fetch_ceden_stations.py  fetch_huc12.py  fetch_reference_data.py  ingest.py  ingest_bend_folders.py  init_db.py  purge_lab_data.py  seed_admin.py  serve.py
sql/: access_control.sql  audit.sql  migrations.sql  schema.sql
tests/: conftest.py  test_audit.py  test_auth.py  test_backfill.py  test_bendlab.py  test_bulkimport.py  test_cases.py  test_ceden.py  test_dbops.py  test_dedup.py  test_export.py  test_geo.py  test_ids.py  test_ingest.py  test_intake.py  test_intake_form.py  test_intake_groups.py  test_labmap.py  test_labmatch.py  test_labquery.py  test_labtasks.py  test_loaders.py  test_maintenance.py  test_notify.py  test_ocr.py  test_places.py  (+9 more)
(+93 files in other folders)
