[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fhab"
version = "0.1.0"
description = "Modernized data pipeline and schema for Freshwater Harmful Algal Bloom (FHAB) monitoring data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Greg Gearheart" }]
dependencies = ["psycopg[binary]>=3.1", "Flask>=1.1", "Werkzeug>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]
deploy = ["gunicorn>=21"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
